--- a/app/views/project_parameters/show.html.erb
+++ b/app/views/project_parameters/show.html.erb
@@ -8,6 +8,11 @@
   </small>
 </h2>
 
+<div class="bs-callout bs-callout-info">
+<%=t('project_parameters.description_html')%>
+</div>
+
+
 <div id="project-parameter-index" v-cloak>
   <table class="table">
     <thead>
