[WIP] In cook, use Project Parameter (implemented client only).

--- a/app/views/vue/_edit_attr_tabpane.html.erb
+++ b/app/views/vue/_edit_attr_tabpane.html.erb
@@ -2,7 +2,8 @@
 
 <div v-if="empty" class="alert alert-warning"><%= I18n.t('nodes.msg.attr_not_exists')%></div>
 
-<form class="form-horizontal">
+<form v-else class="form-horizontal">
+  <%= project_params_usage %>
   <div v-for="(key, attr) in attributes" class="form-group">
     <label for="{{* key | toID}}" class="col-sm-3 control-label">{{* key}}</label>
     <div class="col-sm-5">
