--- a/app/views/infrastructures/modal/_modal_snapshot_retention_policy.html.erb
+++ b/app/views/infrastructures/modal/_modal_snapshot_retention_policy.html.erb
@@ -14,7 +14,7 @@
             <div class="col-md-6">
               <label class="control-label" for="editing_policy.max_amount">
                 <input v-model="editing_policy.enabled" type="checkbox">
-                保持する最新のスナップショット数
+                <%= t('snapshots.snapshots_to_keep') %>
               </label>
             </div>
             <div class="col-md-3">
