--- a/app/views/vue/_rds_tabpane.html.erb
+++ b/app/views/vue/_rds_tabpane.html.erb
@@ -43,7 +43,7 @@
     <tr>
       <td> <%=t('security_groups.title')%> </td>
       <td>
-        <button href="#view-rules-modal" @click="view_rules()" class="btn btn-xs btn-info" class="btn btn-xs dropdown-toggle" data-toggle="modal">
+        <button @click="view_rules()" class="btn btn-xs btn-info" class="btn btn-xs dropdown-toggle" data-toggle="modal">
           <%= glyphicon 'info-sign' %> <%= t 'security_groups.btn.view_rules' %>
         </button>
       </td>
