fixed input box sizing in retiontion policy modal

--- a/app/views/infrastructures/modal/_modal_snapshot_retention_policy.html.erb
+++ b/app/views/infrastructures/modal/_modal_snapshot_retention_policy.html.erb
@@ -19,7 +19,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <input :disabled="!editing_policy.enabled" v-model="editing_policy.max_amount" id="editing_policy.max_amount" type="number" min="3">
+            <input class="col-xs-12" :disabled="!editing_policy.enabled" v-model="editing_policy.max_amount" id="editing_policy.max_amount" type="number" min="3">
           </div>
         </div>
       </div>
