--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -16,7 +16,7 @@
 
       <li class="active">
         <a v-if="no_stack"    @click="show_tabpane('default')"><%= t 'infrastructures.no_stack_info' %></a>
-        <a v-if="in_progress" @click="show_tabpane('default')"><%= fa 'cog fa-spin fa-lg'%> <%= t 'infrastructures.in_progress' %></a>
+        <a v-if="in_progress" @click="show_tabpane('default')"><%= t 'infrastructures.in_progress' %></a>
         <a v-if="stack_fail"  @click="show_tabpane('default')"><%= t 'infrastructures.stack_fail' %></a>
       </li>
 
@@ -77,7 +77,7 @@
         </div>
 
         <%# IN PROGRESS %>
-        <div v-if="in_progress()">
+        <div v-if="is_progress()">
           <span><%= loading_with_message(t('infrastructures.msg.check_intervals')) %></span>
         </div>
 
