fixed warning issues on modal and serverspec tabpane computed functions

--- a/app/views/infrastructures/modal/_modal_change_rules.html.erb
+++ b/app/views/infrastructures/modal/_modal_change_rules.html.erb
@@ -32,7 +32,7 @@
             <td>{{r.group_id}}</td>
             <td><div class="truncate"> {{r.group_name}}</div></td>
             <td><div class="truncate">{{r.description}}</div></td>
-            <td v-if="r.tags[0].key === 'Name'">{{r.tags[0].value}}</td>
+            <td v-if="check_tag(r)">{{r.tags[0].value}}</td>
             <td v-else></td>
           </tr>
           <tr  v-if="filteredLength === 0 && dispItems.length > 0">
