Fixed Vue.js warning messages on RDS tabpane and rewrite some depcrecated functions.

--- a/app/views/vue/_rds_tabpane.html.erb
+++ b/app/views/vue/_rds_tabpane.html.erb
@@ -27,7 +27,7 @@
     </tr>
     <tr>
       <td>Endpoint Address</td>
-      <td colspan="2">{{rds.endpoint.address}}</td>
+      <td colspan="2">{{address}}</td>
     </tr>
     <tr>
       <td>Multi AZ</td>
@@ -148,7 +148,7 @@
             <td>{{r.group_id}}</td>
             <td><div class="truncate"> {{r.group_name}}</div></td>
             <td><div class="truncate">{{r.description}}</div></td>
-            <td v-if="r.tags[0].key === 'Name'">{{r.tags[0].value}}</td>
+            <td v-if="check_tag(r)">{{r.tags[0].value}}</td>
             <td v-else></td>
           </tr>
           </tbody>
