--- a/app/views/infrastructures/modal/_modal_detach_ec2.html.erb
+++ b/app/views/infrastructures/modal/_modal_detach_ec2.html.erb
@@ -5,7 +5,7 @@
 
       <div class="modal-header bg-warning">
         <button class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Terminate Instance #{{physical_id}}</h4>
+        <h4 class="modal-title">Detach Instance #{{physical_id}}</h4>
       </div>
 
       <div class="modal-body">
