Fix typo. DRS -> RDS

--- a/lib/erb-builder/templates/presets/Multi_DataCenter_Pattern_with_RDS.json.erb
+++ b/lib/erb-builder/templates/presets/Multi_DataCenter_Pattern_with_RDS.json.erb
@@ -1,6 +1,6 @@
 {
     "AWSTemplateFormatVersion": "2010-09-09",
-    "Description": "Multi DataCenter pattern with DRS. (ELB x 1, EC2 x 2, RDS x 1)",
+    "Description": "Multi DataCenter pattern with RDS. (ELB x 1, EC2 x 2, RDS x 1)",
     "Parameters": {
         "KeyName": {
             "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
