Check length filter for rendering list

--- a/app/views/key_pairs/index.html.erb
+++ b/app/views/key_pairs/index.html.erb
@@ -60,7 +60,7 @@
       </tbody>
     </table>
 
-    <nav v-if="selected_key_pairs.length >= 10">
+    <nav v-if="check_length">
       <ul class="pager">
         <li :class="{disabled: isStartPage}"><a @click="showPrev()" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></a></li>
         <label><%= t 'monitoring.msg.page' %>: &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>&nbsp<span v-html="key_pairs.length / pages  | roundup"></span>
